--- a/app/src/main/res/layout/fragment_fundraiser.xml
+++ b/app/src/main/res/layout/fragment_fundraiser.xml
@@ -19,21 +19,22 @@
         android:weightSum="1">
 
 
-        <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        <com.nirhart.parallaxscroll.views.ParallaxScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            app:parallax_factor="1.9">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_height="135dp"
+            <ImageView
                 app:srcCompat="@drawable/image_placeholder"
                 android:id="@+id/fundraiser_image"
                 android:layout_alignParentEnd="true"
                 android:background="#ddd"
-                android:layout_width="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="240dp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -44,9 +45,10 @@
                     android:weightSum="1"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="100dp">
+                    android:paddingBottom="100dp"
+                    android:background="@android:color/white">
 
-                    <TextView
+                <TextView
                         android:text="Campaign Title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -122,7 +124,7 @@
             </LinearLayout>
         </LinearLayout>
 
-    </ScrollView>
+    </com.nirhart.parallaxscroll.views.ParallaxScrollView>
 
 </LinearLayout>
 
@@ -130,19 +132,35 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
         android:weightSum="1"
         android:gravity="center"
-        android:background="@android:color/white"
-        android:layout_alignParentBottom="true">
+        android:background="?attr/colorAccent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="88dp"
+        android:elevation="12dp"
+        android:layout_marginTop="5dp">
 
-        <LinearLayout
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:id="@+id/buy_button"
+            android:layout_width="0dp"
+            android:layout_weight="0.33"
+            android:layout_height="match_parent"
+            app:mrl_rippleColor="#26000000"
+            app:mrl_rippleAlpha="0.10"
+            app:mrl_rippleOverlay="false"
+            app:mrl_rippleHover="true"
+            app:mrl_rippleDimension="1dp"
+            app:mrl_rippleDuration="350"
+            android:layout_gravity="center_vertical|center_horizontal">
+
+            <LinearLayout
             android:orientation="vertical"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_height="match_parent"
             android:weightSum="1"
-            android:id="@+id/buy_button">
+            android:id="@+id/buy_button_ll"
+            android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_gravity="center">
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -160,62 +178,92 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:textAllCaps="true"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textStyle="normal|bold"
                 android:layout_marginTop="8dp" />
         </LinearLayout>
+        </com.balysv.materialripple.MaterialRippleLayout>
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.005"
             android:layout_height="match_parent"
-            android:background="#dddddd"
+            android:background="#55dddddd"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
 
-        <LinearLayout
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:id="@+id/donate_button"
+            android:layout_height="match_parent"
+            app:mrl_rippleColor="#26000000"
+            app:mrl_rippleAlpha="0.10"
+            app:mrl_rippleOverlay="false"
+            app:mrl_rippleHover="true"
+            app:mrl_rippleDimension="1dp"
+            app:mrl_rippleDuration="350"
+            android:layout_width="0dp"
+            android:layout_weight="0.33">
+            <LinearLayout
             android:orientation="vertical"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:weightSum="1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/donate_button">
-            <ImageButton
-                app:srcCompat="@drawable/ic_donation"
-                android:id="@+id/imageButton5"
-                android:scaleType="fitCenter"
-                android:background="?attr/selectableItemBackground"
-                android:layout_marginRight="40dp"
-                android:layout_width="80dp"
-                android:layout_weight="0.21"
-                android:layout_height="40dp"
-                android:clickable="false" />
-            <TextView
+            android:id="@+id/donate_button_ll"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_width="match_parent"
+            android:gravity="center_vertical">
+
+                <ImageButton
+                    app:srcCompat="@drawable/ic_donation"
+                    android:id="@+id/imageButton5"
+                    android:scaleType="fitCenter"
+                    android:background="?attr/selectableItemBackground"
+                    android:layout_marginRight="40dp"
+                    android:layout_width="80dp"
+                    android:layout_weight="0.21"
+                    android:layout_height="40dp"
+                    android:clickable="false" />
+
+                <TextView
                 android:text="Donate"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:textAllCaps="true"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textStyle="normal|bold"
                 android:layout_marginTop="8dp" />
         </LinearLayout>
+        </com.balysv.materialripple.MaterialRippleLayout>
 
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.005"
             android:layout_height="match_parent"
-            android:background="#dddddd"
+            android:background="#55dddddd"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp" />
 
-        <LinearLayout
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:id="@+id/sell_button"
+            android:layout_width="0dp"
+            android:layout_weight="0.33"
+            android:layout_height="match_parent"
+            app:mrl_rippleColor="#ff000000"
+            app:mrl_rippleAlpha="0.10"
+            app:mrl_rippleOverlay="false"
+            app:mrl_rippleHover="true"
+            app:mrl_rippleDimension="1dp"
+            app:mrl_rippleDuration="350">
+            <LinearLayout
             android:orientation="vertical"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:weightSum="1"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/sell_button">
+            android:id="@+id/sell_button_ll"
+            android:paddingLeft="20dp"
+            android:layout_width="100dp"
+            android:gravity="center_vertical">
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -233,10 +281,12 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:textAllCaps="true"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textStyle="normal|bold"
                 android:layout_marginTop="8dp" />
         </LinearLayout>
+        </com.balysv.materialripple.MaterialRippleLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
