--- a/app/src/main/res/layout/content_create_item.xml
+++ b/app/src/main/res/layout/content_create_item.xml
@@ -47,7 +47,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:ems="10"
         android:layout_below="@+id/item_text_view2"
         android:layout_alignParentStart="true"
