--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,20 +19,25 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:padding="0dp"
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/appicon"
         android:clickable="true"
-        tools:clickable="false" />
+        tools:clickable="false"
+        android:tint="#fff"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Android Studio"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:id="@+id/nav_header_displayname" />
+        android:id="@+id/nav_header_displayname"
+        android:textColor="#fff"/>
 
     <TextView
         android:id="@+id/nav_header_email"
