--- a/app/src/main/res/layout/user_account_view_page.xml
+++ b/app/src/main/res/layout/user_account_view_page.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="186dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
+        app:srcCompat="@drawable/appicon"
         android:id="@+id/imageView2"
         android:layout_weight="0.49"
         android:layout_marginTop="30dp"
