--- a/app/src/main/res/layout/edit_password_dialog.xml
+++ b/app/src/main/res/layout/edit_password_dialog.xml
@@ -10,7 +10,17 @@
         android:layout_marginTop="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:fontFamily="sans-serif"
+        android:hint="New Password"/>
+    <EditText
+        android:id="@+id/confirm_password"
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
-        android:hint="Password"/>
+        android:hint="Confirm Password"/>
 </LinearLayout>
